--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.videoPlayer.VideoPlayerActivity"
+            android:configChanges="orientation|screenSize|smallestScreenSize|screenLayout|uiMode|keyboard|keyboardHidden|navigation"
             android:exported="false" />
         <activity
             android:name=".ui.dashboard.DashboardActivity"
